# slides-rs

./: Cargo.toml
slides-arrow/: Cargo.toml  justfile
slides-arrow/src/: bindings.rs  connector.js  lib.rs
slides-arrow/wit/: module.wit  world.wit
slides-lang/: Cargo.toml  build.rs  example.sld  line-tool.sld  pros.sld
slides-lang/assets/: highlight.head.html
slides-lang/line-tool/: index.html  navigation.js  style.css
slides-lang/pros-assets/: leader-line-arrow.init.js  leader-line.head.html  leader-line.min.js
slides-lang/pros-out/: index.html  navigation.js  style.css
slides-lang/pros-out/pros-assets/: leader-line.min.js
slides-lang/slides-modules/: slides_arrow.wasm
slides-lang/src/: compiler.rs  formatter.rs  lib.rs  main.rs
slides-lang/src/compiler/: binder.rs  diagnostics.rs  evaluator.rs  lexer.rs  module.rs  parser.rs
slides-lang/src/compiler/binder/: globals.rs  typing.rs
slides-lang/src/compiler/evaluator/: functions.rs  slide.rs  style.rs  value.rs
slides-lang/src/compiler/module/: state.rs
slides-rs-core/: Cargo.toml
slides-rs-core/assets/: navigation.js  style.css
slides-rs-core/out_presentation/: index.html  navigation.js  style.css
slides-rs-core/src/: animations.rs  elements.rs  error.rs  layout.rs  lib.rs  main.rs  output.rs  styling.rs
slides-rs-core/src/elements/: custom_element.rs  flex.rs  grid.rs  image.rs  label.rs
slides-rs-core/src/elements/label/: markdown.rs
