[package]
name = "slides-lang"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.34", features = ["derive"] }
const-str = "0.6.2"
convert_case = "0.8.0"
enum_dispatch = "0.3.13"
slides-rs-core = { version = "0.1.0", path = "../slides-rs-core" }
string-interner = "0.19.0"
strum = { version = "0.27.1", features = ["derive"] }
summum-types = "0.1.4"
