[package]
name = "slides-lang"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.34", features = ["derive"] }
const-str = "0.6.2"
constcat = "0.6.0"
convert_case = "0.8.0"
enum_dispatch = "0.3.13"
html-escape = "0.2.13"
index-map = "0.1.0"
notify = "8.0.0"
slides-rs-core = { version = "0.1.0", path = "../slides-rs-core" }
string-interner = "0.19.0"
struct-field-names-as-array = { version = "0.3.0", path = "../struct_field_names_as_array/struct-field-names-as-array" }
strum = { version = "0.27.1", features = ["derive"] }
summum-types = "0.1.4"
thiserror = "2.0.12"
